@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="service.pushbullet"
        name="Pushbullet"
-       version="0.6.6b"
+       version="0.6.8b"
        provider-name="muttley">
     <requires>
         <import addon="xbmc.addon" version="12.0.0"/>
@@ -13,13 +13,10 @@
     </extension>
     <extension point="xbmc.addon.metadata">
         <summary lang="en">Pushbullet Notification Client</summary>
-        <description lang="en">A Pushbullet client that receive pushes and/or mirroring other devices.
+        <description lang="en">A Pushbullet client that receive/send pushes and/or mirroring other devices.
 
 TIPS: For set the Pushbullet ACCESS TOKEN as well as in the addon settings, you can directly edit the file:
 'userdata/addon_data/service.pushbullet/settings.xml'
-
-It uses the following Python modules:
-httplib2, six, websocket-client, backports.ssl_match_hostname
         </description>
         <disclaimer lang="en">The author is not responsible for anything. Please review the code if you do not trust.
         </disclaimer>
